Week 14 REACT CRUD APP v2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="main-con">
         <div class="left-section">
-            <h2>Left side container<h2>
+            <h2>My List Machine<h2>
             <label for="user-input">New Item:</label>
             <input type="text" id="user-input" name="user-input" placeholder="Apples..">
             <button>Submit New Item</button>
